Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.11.15, 11.4.9, 11.8.4, 12.1.2
-
Can result in hang or crash
-
-
Q4/2025 Server Development
Description
To paraphrase knielsen:
The fix in MDEV-37686 clears thd->rgi_slave without any locking or synchronization. This leads to segfaults in parallel replication if another worker thread is doing a deadlock kill on the THD, and getting the rgi_slave pulled out from under its feet.
Attachments
Issue Links
- is caused by
-
MDEV-37686 rpl.create_or_replace_mix2 fails in MDEV-35915 branch
-
- Closed
-
- relates to
-
MDEV-37928 Assertion !thd->rgi_slave failed on ANALYZE TABLE on replica
-
- Closed
-
-
MDEV-37941 Assertion `!thd->rgi_slave' failed on INSERT w/ parallel slave
-
- Closed
-
-
MDEV-38254 replicated temporary tables must not be accessed by start_new_trans
-
- Closed
-