sql/sql_class.cc
@@ -6364,8 +6364,7 @@ start_new_trans::start_new_trans(THD *thd)
   thd->server_status&= ~(SERVER_STATUS_IN_TRANS |
                          SERVER_STATUS_IN_TRANS_READONLY);
   thd->server_status|= SERVER_STATUS_AUTOCOMMIT;
-  org_rgi_slave= thd->rgi_slave;
-  thd->rgi_slave= NULL;
+  hide_rgi_slave(thd->rgi_slave);
 }
 
 
@@ -6382,7 +6381,7 @@ void start_new_trans::restore_old_transaction()
     MYSQL_COMMIT_TRANSACTION(org_thd->m_transaction_psi);
   org_thd->m_transaction_psi= m_transaction_psi;
   org_thd->variables.wsrep_on= wsrep_on;
-  org_thd->rgi_slave= org_rgi_slave;
+  unhide_rgi_slave(org_thd->rgi_slave);
   org_thd= 0;
 }
 
