sql/sql_class.h
@@ -6330,7 +6330,6 @@ class start_new_trans
   uint in_sub_stmt;
   uint server_status;
   my_bool wsrep_on;
-  rpl_group_info* org_rgi_slave;
 
 public:
   start_new_trans(THD *thd);
